# omamori

./: .gitignore  CMakeLists.txt  LICENSE  MAPPING_TRACKER.md  README.md  quick_test.sh
cmake/: OmamoriConfig.cmake.in
common/include/: memory_encryption.hpp  sec_string.hpp
examples/: anti_attach_test.cpp  example_license_protection.cpp  granular_config_linux.cpp  granular_config_windows.cpp  linux_example.cpp  selective_protection.cpp  simple_selective.cpp  test_antivm_linux.cpp  test_antivm_windows.cpp  test_memory_encryption.cpp  upx_stub_protection.cpp  verify_antidump.cpp  windows_example.cpp
include/: omamori.hpp  omamori_config.hpp
linux/include/: antidebug.hpp  antidump.hpp  antivm.hpp
linux/src/: antidebug.cpp  antidump.cpp  antivm.cpp  memory_encryption.cpp
tests/: test_all_features.cpp  test_linux.cpp  test_linux_safe.cpp  test_simple.cpp  test_windows.cpp  test_windows_detailed.cpp
windows/include/: antidebug.hpp  antidump.hpp  antivm.hpp  internal.hpp  syscall.hpp
windows/src/: antidebug.cpp  antidump.cpp  antivm.cpp  internal.cpp  memory_encryption.cpp  syscall.cpp
